Clean Architecture aplicada

--- a/CRUD/CRUD.csproj
+++ b/CRUD/CRUD.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DOMINIO\DOMINIO.csproj" />
+    <ProjectReference Include="..\INFRA\INFRA.csproj" />
+  </ItemGroup>
+
 </Project>
