--- a/WEB/wwwroot/manifest.json
+++ b/WEB/wwwroot/manifest.json
@@ -1,7 +1,7 @@
 {
   "_version": "1.12.0",
   "sap.app": {
-	"id": "sap.ui.demo.walkthrough",
+	"id": "sap.ui.demo.CrudPecas",
 	"type": "application",
 	"i18n": "i18n/i18n.properties",
 	"title": "{{appTitle}}",
@@ -20,7 +20,7 @@
   },
   "sap.ui5": {
 	"rootView": {
-		"viewName": "sap.ui.demo.walkthrough.view.App",
+		"viewName": "sap.ui.demo.CrudPecas.view.App",
 		"type": "XML",
 		"id": "app"
 	},
@@ -29,62 +29,15 @@
 	  "libs": {
 		"sap.ui.core": {},
 		"sap.m": {}
-	  },
-	  "contentDensities": {
-		"compact": true,
-		"cozy": true
 	  }
 	},
 	"models": {
 	  "i18n": {
 		"type": "sap.ui.model.resource.ResourceModel",
 		"settings": {
-		  "bundleName": "sap.ui.demo.walkthrough.i18n.i18n",
+		  "bundleName": "sap.ui.demo.CrudPecas.i18n.i18n",
 		  "supportedLocales": [""],
 		  "fallbackLocale": ""
-		}
-	  },
-	  "invoice": {
-		"type": "sap.ui.model.json.JSONModel",
-		"uri": "Invoices.json"
-	  }
-	},
-	"resources": {
-		"css": [
-		  {
-			"uri": "css/style.css"
-		  }
-		]
-	},
-	"routing": {
-	  "config": {
-		"routerClass": "sap.m.routing.Router",
-		"type": "View",
-		"viewType": "XML",
-		"path": "sap.ui.demo.walkthrough.view",
-		"controlId": "app",
-		"controlAggregation": "pages"
-	  },
-	  "routes": [
-		{
-		  "pattern": "",
-		  "name": "overview",
-		  "target": "overview"
-		},
-		{
-		  "pattern": "detail/{invoicePath}",
-		  "name": "detail",
-		  "target": "detail"
-		}
-	  ],
-	  "targets": {
-		"overview": {
-		  "id": "overview",
-		  "name": "Overview"
-		},
-		"detail": {
-		  "id": "detail",
-		  "name": "Detail"
 		}
 	  }
 	}
