--- a/WEB/WEB.csproj
+++ b/WEB/WEB.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="app.config" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
@@ -15,6 +19,10 @@
     <Folder Include="wwwroot\Controller\" />
     <Folder Include="wwwroot\i18n\" />
     <Folder Include="wwwroot\View\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
 
   <ItemGroup>
