Tipo navegação adicionado e i18n organizado

--- a/WEB/wwwroot/manifest.json
+++ b/WEB/wwwroot/manifest.json
@@ -75,7 +75,9 @@
 				"viewType": "XML",
 				"path": "PedroAutoPecas.view",
 				"controlId": "app",
-				"controlAggregation": "pages"
+				"controlAggregation": "pages",
+				"transition": "slide",
+            	"async": true
 			},
 			"routes": [
 				{
