--- a/WEB/wwwroot/manifest.json
+++ b/WEB/wwwroot/manifest.json
@@ -77,7 +77,7 @@
 				"controlId": "app",
 				"controlAggregation": "pages",
 				"transition": "slide",
-            	"async": true
+            	"async": true				
 			},
 			"routes": [
 				{
@@ -86,9 +86,9 @@
 					"target": "listaDePecas"
 				},
 				{
-					"pattern": "detail/{invoicePath}",
-					"name": "detail",
-					"target": "detail"
+					"pattern": "Detalhe",
+					"name": "Detalhe",
+					"target": "Detalhe"
 				}
 			],
 			"targets": {
@@ -96,9 +96,9 @@
 					"id": "listaDePecasId",
 					"name": "ListaDePecas"
 				},
-				"detail": {
-					"id": "detail",
-					"name": "Detail"
+				"Detalhe": {
+					"id": "DetalheId",
+					"name": "Detalhe"
 				}
 			}
 		}
